--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
 </head>
-<body class="darkTheme">
+<body>
   <app-root></app-root>
 </body>
 </html>
